@@ -7,6 +7,5 @@
 .*: +file format elf32-sparc
 
 Contents of section .data:
- 13000 12345678 deadbeef 00000000 00000000  .*
- 13010 00000000 00000000 00000000 00000000  .*
+ 13000 12345678 deadbeef                    .*
 #pass
