@@ -7,6 +7,5 @@
 .*: +file format elf64-sparc
 
 Contents of section .data:
- 103000 12345678 deadbeef 00000000 00000000  .*
- 103010 00000000 00000000 00000000 00000000  .*
+ 103000 12345678 deadbeef                    .*
 #pass
