@@ -1,3 +1,8 @@
+2015-02-28  Alan Modra  <amodra@gmail.com>
+
+	* gas/sparc/pcrel.d: Update for changed padding in data sections.
+	* gas/sparc/pcrel64.d: Likewise.
+
 2015-02-26  Marcus Shawcroft  <marcus.shawcroft@arm.com>
 
 	* gas/aarch64/diagnostic.s: Add LDR test.
